--- a/dataset_collecting/Dataset_convert/compose_pics_to_hdf5.ipynb
+++ b/dataset_collecting/Dataset_convert/compose_pics_to_hdf5.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -138,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: Pillow in /usr/local/lib/python3.6/dist-packages (7.0.0)\n"
+      "Requirement already satisfied: Pillow in c:\\users\\admin\\anaconda3\\lib\\site-packages (7.0.0)\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -215,9 +215,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (2.10.0)\n",
-      "Requirement already satisfied: numpy>=1.7 in /usr/local/lib/python3.6/dist-packages (from h5py) (1.18.5)\n",
-      "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from h5py) (1.15.0)\n"
+      "Requirement already satisfied: h5py in c:\\users\\admin\\anaconda3\\lib\\site-packages (2.10.0)\n",
+      "Requirement already satisfied: numpy>=1.7 in c:\\users\\admin\\anaconda3\\lib\\site-packages (from h5py) (1.18.1)\n",
+      "Requirement already satisfied: six in c:\\users\\admin\\anaconda3\\lib\\site-packages (from h5py) (1.14.0)\n"
      ]
     }
    ],
@@ -227,13 +227,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "mFgxmXg6-h72"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'touch' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
     "!touch sample_dataset.h5"
    ]
